--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,8 +1,73 @@
-* {
+html{
     box-sizing: border-box;
 }
-.nav-header{
-    height: 133px;
-    margin: 0;
-    background-color: #19396D;
+*, *:before, *:after{
+    box-sizing: inherit;
 }
+body{
+    padding: 0;
+    margin: 0;
+}
+h2{
+    font-size: 20px;
+}
+h3{
+    font-size: 17px;
+}
+h4{
+    font-size: 15px;;
+}
+h5{
+    font-size: 14px;
+}
+h6{
+    font-size: 12px;
+}
+p{
+    font-size: 10px;;
+}
+.nav-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #19396D;
+    padding-left: 30px;
+    padding-right: 30px;
+    width: 100%;
+    height: 59px;
+    box-shadow: 0px 1px 3px 0px #0000004D;
+    box-shadow: 0px 4px 8px 3px #00000026;
+}
+.header-r{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 240px;
+}
+.search-box{
+    position: relative;
+    width: 170px;
+    height: 25px;;
+}
+.search-input{
+    font-size: 15px;
+    color: black;
+    background-color:  white;
+    width: 100%;
+    height: 100%;
+    padding-left: 5px;
+    padding-top: 3px;
+    padding-bottom: 4px;
+    padding-right: 22px;
+    border: 0;
+    border-radius: 2px;
+}
+.search-icon{
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+
+
