--- a/CSS/aboutAs.css
+++ b/CSS/aboutAs.css
@@ -17,6 +17,12 @@ body{
     padding: 0;
 }
 
+footer{
+    width: 1280px;
+    height: 292px;
+    background-color: #D9D9D9;
+}
+
 .header{
     background-color: #19396D;
     width: 1280px;
@@ -34,7 +40,7 @@ body{
     margin: 0 auto;
 }
 
-.area_est,.area_book,.area_video{
+.area_est,.area_book,.area_video,.area_cyj{
     display: flex;
     align-items: flex-start;
 }
@@ -139,4 +145,59 @@ body{
     height: 44px;
     margin-top: 28px;
     margin-bottom: 0;
+}
+
+.area_cyj{
+    width: 1212px;
+    height: 350px;
+    background-color: #47587D;
+    border-radius: 50px;
+    margin: 105px 34px 98px 34px;
+    position: relative;
+}
+
+.word_cyj{
+    width: 537px;
+    height: 218px;
+    margin-top: 66px;
+    margin-left: 139px;
+}
+
+.tit_cyj{
+    width: 106px;
+    height: 31px;
+    font-size: 16px;
+    color: #47587D;
+    background-color: #FFFFFF;
+    border-radius: 2px;
+    padding: 5px 21px 4px 21px;
+    margin-top: 0;
+    margin-bottom: 5px;
+}
+
+.tit_cyj_name{
+    width: 155px;
+    height: 45px;
+    font-size: 24px;
+    color: #47587D;
+    background-color: white;
+    border-radius: 2px;
+    padding: 6px 41px;
+    margin: 0;
+}
+
+.intro_cyj{
+    width: 537px;
+    height: 110px;
+    margin-top: 27px;
+    margin-bottom: 0;
+    color: #FFFFFF;
+}
+
+.img_cyj{
+    width: 464px;
+    height: 455px;
+    position: absolute;
+    top: -105px;
+    left: 676px;
 }
