--- a/CSS/aboutUs.css
+++ b/CSS/aboutUs.css
@@ -18,25 +18,25 @@ body{
 }
 
 footer{
-    width: 1280px;
+    width: 100%;
     height: 292px;
     background-color: #D9D9D9;
 }
 
 .header{
     background-color: #19396D;
-    width: 1280px;
+    width: 100%;
     height: 59px;
 }
 
 .nav{
     background-color: #354567;
-    width: 1280px;
+    width: 100%;
     height: 48px;
 }
 
 .contain{
-    width: 1280px;
+    width: 100%;
     margin: 0 auto;
 }
 
@@ -46,7 +46,7 @@ footer{
 }
 
 .area_est{
-    width: 1280px;
+    width: 100%;
     height: 374px;
 }
 
@@ -83,7 +83,7 @@ footer{
 }
 
 .area_book{
-    width: 1280px;
+    width: 100%;
     height: 374px;
     background-color: #47587D;
 }
