--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,6 @@
 html{
     box-sizing: border-box;
+    font-family: 'Inter', sans-serif;
 }
 *, *:before, *:after{
     box-sizing: inherit;
@@ -35,8 +36,11 @@ p{
     padding-right: 30px;
     width: 100%;
     height: 59px;
-    box-shadow: 0px 1px 3px 0px #0000004D;
-    box-shadow: 0px 4px 8px 3px #00000026;
+    box-shadow: 0px 1px 3px 0px #0000004D, 0px 4px 8px 3px #00000026;
+}
+.nav-header h2{
+    color: white;
+    font-weight: 700;
 }
 .header-r{
     display: flex;
@@ -113,19 +117,142 @@ p{
     width: 100%;
 }
 .bigpic-l{
+    position: absolute;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    gap: 4px;
+    left: 30px;
+    top: 30px;
 }
 .bigpic-r{
+    position: absolute;
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
     gap: 4px;
+    right: 30px;
+    bottom: 30px;
 }
 .bigpic-c{
+    display:inline;
     background: #FFFFFFB2;
     padding-left: 4px;
     padding-right: 4px;
     padding-top: 0px;
     padding-bottom: 0px;
+    margin: 0px;
     color: black;
 }
+.purpose-h{
+    color: #19396D;
+    margin-top: 43px;
+    margin-bottom: 34px;
+    text-align: center;
+    font-weight: 700;
+}
+.purpose-c{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+.giver,  .taker{
+    position: relative;
+    width: 285px;
+    height: 268px;
+    background-color: #A3A5A6;
+    border-radius: 2px;
+}
+.giver{
+    margin-right: 200px;
+}
+.giver-h, .taker-h{
+    position: absolute;
+    top: -20px;
+    left: -40px;
+    background-color: #47587D;
+    padding-right: 22px;
+    padding-left: 22px;
+    padding-top: 7px;
+    padding-bottom: 7px;
+    margin: 0;
+    border-radius: 2px;
+    color: white;
+    box-shadow: 0px 1px 3px 0px #0000004D, 0px 4px 8px 3px #00000026;
+}
+.lefthand{
+    position: absolute;
+    left: 0px;
+    top: 22.39px;
+}
+.righthand{
+    position: absolute;
+    right: 0px;
+    top: 27.39px;
+}
+.giver-c, .taker-c{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2.2px;
+    background-color: #47587D;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    bottom: -33px;
+    right: -40px;
+    box-shadow: 0px 1px 3px 0px #0000004D, 0px 4px 8px 3px #00000026;
+    border-radius: 2px;
+    color: white;
+}
+.giver-c h4, .taker-c h4{
+    margin: 0;
+}
+.dohow{
+    background-color: #19396D;
+    width: 100%;
+    margin-top: 83px;
+    border-radius: 30px 30px 0px 0px;
+    padding-top: 99px;
+}
+.do-h{
+    color: white;
+    text-align: center;
+    font-weight: 700;
+    margin-bottom: 26px;
+}
+.season{
+    display: flex;
+    justify-content: center;
+    border-radius: 2px 2px 0px 0px;
+}
+.btn-season{
+    padding-left: 9px;
+    padding-right: 9px;
+    padding-top: 7px;
+    padding-bottom: 5px;
+    color: #19396D;
+    border-right: 1px solid #19396d;
+    background-color: white;
+    cursor: pointer;
+    border-radius: 2px 2px 0px 0px;
+}
+.season-button:last-child {
+    border-right: none;
+}
+.btn-season:hover {
+    background: #47587D80;
+    color: white;
+}
+.active {
+    background: #47587D80;
+    color: white;
+}
+
+
+
+
+
