--- a/CSS/moreStory.css
+++ b/CSS/moreStory.css
@@ -21,10 +21,14 @@ footer{
     width: 100%;
     height: 292px;
     background-color: #D9D9D9;
+    margin-top: 93px;
 }
 
 li{
-    line-height: 16px;  
+    line-height: 16px;
+    list-style-type: disc;
+    list-style-position: outside;
+    display: list-item;
 }
 
 .contain{
@@ -46,7 +50,7 @@ li{
 
 .main_contain{
     width: 1178px;
-    height: 1958px;
+    min-height: 1958px;
     margin: 40px auto 93px auto;
     color: #354567;
     position: relative;
@@ -86,6 +90,7 @@ li{
     display: flex;
     align-items: flex-start;
     flex-direction: row;
+    position: relative;
 }
 
 .area_main2{
@@ -94,6 +99,7 @@ li{
     background-color: #354567;
     color: #FFFFFF;
     border-radius:0 20px 20px 20px;
+    margin-bottom: 93px;
     display: flex;
     align-items: flex-start;
     flex-direction: row;
@@ -119,7 +125,7 @@ li{
 
 .area_left{
     width: 120px;
-    height: 112px;
+    min-height: 112px;
     font-size: 16px;
     padding-left: 24px;
     margin: 0;
@@ -139,6 +145,32 @@ li{
     top: 60px;
     left: 19px;
     margin-right: 19px;
+}
+
+.left{
+    vertical-align: middle;
+    position: relative;
+}
+
+.left_line{
+    width: 0%;
+    height: 1px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transition: all .3s linear;
+}
+
+.left_line_blue{
+    background-color: #354567;
+}
+
+.left_line_white{
+    background-color: white;
+}
+
+.left:hover .left_line{
+    width: 100%;
 }
 
 .left_word{
@@ -252,6 +284,36 @@ li{
     height: 298px;
     display: block;
     margin: 24px auto 0 auto;
+}
+
+.spacer {
+    width: 100%;
+    height: 0; /* 預設為0，JavaScript動態調整 */
+    visibility: hidden;
+}
+
+#left1{
+    width: 80px;
+}
+
+#left2, #left4{
+    width: 96px;
+}
+
+#left3{
+    width: 64px;
+}
+
+#left_hl1{
+    width: 112px;
+}
+
+#left_hl2{
+    width: 128px;
+}
+
+#left_hl3{
+    width: 144px;
 }
 
 #tit1{
