--- a/CSS/moreStory.css
+++ b/CSS/moreStory.css
@@ -77,9 +77,17 @@ li{
     color: #354567;
 }
 
+.btn_send:hover {
+    box-shadow : 10px 0px 5px #19396D;
+}
+
 .btn_homeless{
     background-color: #354567;
     color: #FFFFFF;
+}
+
+.btn_homeless:hover {
+    box-shadow : 10px 0px 5px #B9C1D2;
 }
 
 .area_main{
