--- a/CSS/moreStory.css
+++ b/CSS/moreStory.css
@@ -15,6 +15,7 @@ body{
     font-weight: 550;
     margin: 0;
     padding: 0;
+    cursor: default;
 }
 
 footer{
@@ -29,6 +30,10 @@ li{
     list-style-type: disc;
     list-style-position: outside;
     display: list-item;
+}
+
+li:hover{
+    cursor: pointer;
 }
 
 .contain{
