--- a/CSS/moreStory.css
+++ b/CSS/moreStory.css
@@ -100,7 +100,6 @@ li:hover{
     height: 1905px;
     background-color: #B9C1D2;
     border-radius:0 20px 20px 20px;
-    display: flex;
     align-items: flex-start;
     flex-direction: row;
     position: relative;
@@ -113,7 +112,6 @@ li:hover{
     color: #FFFFFF;
     border-radius:0 20px 20px 20px;
     margin-bottom: 93px;
-    display: flex;
     align-items: flex-start;
     flex-direction: row;
 }
@@ -212,6 +210,20 @@ li:hover{
     position: relative;
     top: 60px;
     left: 136px;
+}
+
+.fade{
+    opacity: 0;
+    transition: opacity 2s;
+}
+
+.fade2{
+    opacity: 0;
+    transition: opacity 3s;
+}
+
+.visible {
+    opacity: 1;
 }
 
 .intro1{
