--- a/CSS/index.css
+++ b/CSS/index.css
@@ -467,7 +467,7 @@ p{
     margin-top: 0px;
     margin-bottom: 10px;
 }
-.middle1 h6, .middle2 h6, .right h6, .instagram, .faebook, .youtube{
+.middle1 h6, .middle2 h6, .right h6, .instagram, .facebook, .youtube{
     cursor: pointer;
 }
 .left h2{
