--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -14,8 +14,95 @@ h5{
 h6{
     font-size: 12px;
 }
-p{
-    font-size: 10px;;
+
+.fixed{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+}
+.nav-header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #19396D;
+    padding-left: 30px;
+    padding-right: 30px;
+    width: 100%;
+    height: 59px;
+    box-shadow: 0px 1px 3px 0px #0000004D, 0px 4px 8px 3px #00000026;
+}
+.nav-header h2{
+    color: white;
+    font-weight: 700;
+}
+.header-r{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 240px;
+}
+.search-box{
+    position: relative;
+    width: 170px;
+    height: 25px;;
+}
+.search-input{
+    font-size: 15px;
+    color: black;
+    background-color:  white;
+    width: 100%;
+    height: 100%;
+    padding-left: 5px;
+    padding-top: 4px;
+    padding-bottom: 3px;
+    padding-right: 22px;
+    border: 0;
+    border-radius: 2px;
+}
+.search-icon{
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
+.btn-lan{
+    font-weight: 25px;
+    height: 25px;
+    background-color: white;
+    border: 0;
+    color: black;
+    padding-right: 5px;
+    padding-left: 5px;
+    padding-top: 4px;
+    padding-bottom: 3px;
+    cursor: pointer;
+    border-radius: 2px;
+}
+.nav-content{
+    width: 100%;
+    height: 48px;
+    background-color: #354567;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-right: 115px;
+    padding-left: 115px;
+    padding-top: 20px;
+    padding-bottom: 10px;
+}
+.btn-catalog{
+    background-color: transparent;
+    border: 0;
+    color: white;
+    font-size: 15px;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-top: 0px;
+    padding-bottom: 0px;
+    cursor: pointer;
 }
 
 .footer{
