--- a/CSS/index.css
+++ b/CSS/index.css
@@ -120,6 +120,8 @@ p{
     width: 100%;
     position: relative;
     margin-top: 107px;
+
+    overflow: hidden;
 }
 .homeless{
     width: 100%;
@@ -132,6 +134,9 @@ p{
     gap: 4px;
     left: 30px;
     top: 30px;
+    opacity: 0; 
+    transform: translateX(-100%); 
+    transition: opacity 0.5s ease, transform 0.8s ease; 
 }
 .bigpic-r{
     position: absolute;
@@ -141,6 +146,13 @@ p{
     gap: 4px;
     right: 30px;
     bottom: 30px;
+    opacity: 0; 
+    transform: translateX(+100%); 
+    transition: opacity 0.5s ease, transform 0.8s ease; 
+}
+.bigpic-l.show, .bigpic-r.show {
+    opacity: 1; 
+    transform: translateX(0); 
 }
 .bigpic-c{
     display:inline;
@@ -151,6 +163,13 @@ p{
     padding-bottom: 0px;
     margin: 0px;
     color: black;
+}
+.purpose {
+    opacity: 0; 
+    transition: opacity 0.8s ease; 
+}
+.purpose.show {
+    opacity: 1; 
 }
 .purpose-h{
     color: #19396D;
@@ -164,6 +183,13 @@ p{
     justify-content: center;
     align-items: center;
     width: 100%;
+}
+.season-img, .season-c, .give {
+    opacity: 0; 
+    transition: opacity 0.8s ease; 
+}
+.season-img.show, .season-c.show, .give.show{
+    opacity: 1;
 }
 .giver,  .taker{
     position: relative;
