--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -1,4 +1,3 @@
-
 h2{
     font-size: 20px;
 }
@@ -14,7 +13,9 @@ h5{
 h6{
     font-size: 12px;
 }
-
+p{
+    font-size: 10px;;
+}
 .fixed{
     position: fixed;
     top: 0;
@@ -69,7 +70,7 @@ h6{
     cursor: pointer;
 }
 .btn-lan{
-    font-weight: 25px;
+    weight: 25px;
     height: 25px;
     background-color: white;
     border: 0;
@@ -103,52 +104,4 @@ h6{
     padding-top: 0px;
     padding-bottom: 0px;
     cursor: pointer;
-}
-
-.footer{
-    width: 100%;
-    height: 294px;
-    background-color: #d9d9d9;
-    padding-top: 43px;
-    padding-left: 92px;
-    padding-right: 92px;
-    position: relative;
-}
-.footer-top{
-    display: flex;
-    justify-content: space-between;
-}
-.left h6, .middle1 h6, .middle2 h6, .right h6{
-    margin-top: 0px;
-    margin-bottom: 10px;
-}
-.middle1 h6, .middle2 h6, .right h6, .instagram, .facebook, .youtube{
-    cursor: pointer;
-}
-.left h2{
-    font-weight: 700;
-    margin-top: 0px;
-    color: #19396d;
-    margin-bottom: 18px;
-}
-.middle1 h3, .middle2 h3, .right h3{
-    margin-top: 0px;
-    color: #19396d;
-    margin-bottom: 18px;
-}
-.footer-hr{
-    width: 90%;
-    position: absolute;
-    margin: 0;
-    bottom: 42px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-.footer-p{
-    position: absolute;
-    right: 92px;
-    margin: 0;
-    bottom: 17px;
-    text-align: end;
-    font-size: 10px;
 }
