--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -105,3 +105,49 @@ p{
     padding-bottom: 0px;
     cursor: pointer;
 }
+.footer{
+    width: 100%;
+    height: 294px;
+    background-color: #d9d9d9;
+    padding-top: 43px;
+    padding-left: 92px;
+    padding-right: 92px;
+    position: relative;
+}
+.footer-top{
+    display: flex;
+    justify-content: space-between;
+}
+.left h6, .middle1 h6, .middle2 h6, .right h6{
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+.middle1 h6, .middle2 h6, .right h6, .instagram, .facebook, .youtube{
+    cursor: pointer;
+}
+.left h2{
+    font-weight: 700;
+    margin-top: 0px;
+    color: #19396d;
+    margin-bottom: 18px;
+}
+.middle1 h3, .middle2 h3, .right h3{
+    margin-top: 0px;
+    color: #19396d;
+    margin-bottom: 18px;
+}
+.footer-hr{
+    width: 90%;
+    position: absolute;
+    margin: 0;
+    bottom: 42px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.footer-p{
+    position: absolute;
+    right: 92px;
+    margin: 0;
+    bottom: 17px;
+    text-align: end;
+}
