--- a/CSS/aboutUs.css
+++ b/CSS/aboutUs.css
@@ -76,6 +76,10 @@ body{
     margin-bottom: 0;
 }
 
+.intro_word{
+    font-size: 16px;
+}
+
 .word_fade{
     opacity: 0;
     transition: opacity 2s;
