--- a/CSS/moreStory.css
+++ b/CSS/moreStory.css
@@ -108,10 +108,16 @@ li:hover{
     left: 0;
     width: 100%;
 }
+
+.area_main2 p{
+    font-size: 16px;
+}
+
 .active {
     visibility: visible;
     opacity: 1;
 }
+
 .btn_both h1 {
     cursor: pointer;
 }
