--- a/CSS/index.css
+++ b/CSS/index.css
@@ -27,6 +27,7 @@ h6{
 p{
     font-size: 10px;;
 }
+/*header*/
 .fixed{
     position: fixed;
     top: 0;
@@ -116,6 +117,7 @@ p{
     padding-bottom: 0px;
     cursor: pointer;
 }
+/*bigpic*/
 .bigpic{
     width: 100%;
     position: relative;
@@ -164,6 +166,7 @@ p{
     margin: 0px;
     color: black;
 }
+/*purpose*/
 .purpose {
     opacity: 0; 
     transition: opacity 0.8s ease; 
@@ -245,6 +248,7 @@ p{
 .giver-c h4, .taker-c h4{
     margin: 0;
 }
+/*do*/
 .dohow{
    position: relative;
     background-color: #19396D;
@@ -351,7 +355,6 @@ p{
     height: 256px;
     position: relative;
 }
-
 .card-imgA, .card-imgB, .card-imgC, .card-imgD, .card-imgE{
     position: absolute;
     width: 100%;
@@ -384,6 +387,7 @@ p{
     margin-top: 7px;
     margin-bottom: 0px;
 }
+/*how*/
 .how-h{
     color: white;
     text-align: center;
@@ -491,6 +495,7 @@ p{
 .card-c1.active {
     display: block; /* 只显示当前的文本 */
 }
+/*footer*/
 .footer{
     width: 100%;
     height: 294px;
