--- a/CSS/index.css
+++ b/CSS/index.css
@@ -106,16 +106,17 @@ p{
     padding-top: 20px;
     padding-bottom: 10px;
 }
-.btn-catalog{
+.btn-catalog {
+    color: #FFFFFF;
     background-color: transparent;
     border: 0;
-    color: white;
     font-size: 15px;
     padding-right: 0px;
     padding-left: 0px;
     padding-top: 0px;
     padding-bottom: 0px;
     cursor: pointer;
+    text-decoration: none;
 }
 /*bigpic*/
 .bigpic{
@@ -239,8 +240,9 @@ p{
     padding-right: 20px;
     padding-top: 8px;
     padding-bottom: 8px;
-    bottom: -33px;
-    right: -40px;
+    margin-top: 235px;
+    margin-left: 97px;
+    margin-right: -180px;
     box-shadow: 0px 1px 3px 0px #0000004D, 0px 4px 8px 3px #00000026;
     border-radius: 2px;
     color: white;
