--- a/CSS/index.css
+++ b/CSS/index.css
@@ -111,12 +111,59 @@ p{
     background-color: transparent;
     border: 0;
     font-size: 15px;
-    padding-right: 0px;
-    padding-left: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding: 10px 20px;
     cursor: pointer;
     text-decoration: none;
+}
+.a-catalog{
+    color: #FFFFFF;
+    background-color: transparent;
+    border: 0;
+    font-size: 15px;
+    padding: 0px;
+    cursor: pointer;
+    text-decoration: none;
+}
+.btn-catalog:hover {
+    background-color: #505f75; 
+}
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none; 
+    position: absolute;
+    background-color: #354567;
+    border-radius: 5px;
+    top: 40px; 
+    left: 0;
+    width: 200px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+}
+li > a {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+}
+li > a:hover {
+    background-color: #505f75;
+}
+li:hover > ul {
+    display: block;
+}
+li {
+    position: relative;
+    list-style-type: none;
+}
+li > a {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: transparent;
+    display: block;
+}
+li > a:hover {
+    background-color: #505f75;
 }
 /*bigpic*/
 .bigpic{
@@ -544,6 +591,9 @@ p{
     bottom: 17px;
     text-align: end;
 }
-
+.footer-a{
+    text-decoration: none;
+    color: black;
+}
 
 
