--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -1,5 +1,20 @@
 html{
+    background-color: #FFFFFF; 
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+*{
+    box-sizing: inherit;
+}
+body{
+    font-family: "Noto sans", sans-serif;
+    font-weight: 550;
+    margin: 0;
+    padding: 0;
+    cursor: default;
+    overflow-x: hidden;
 }
 h2{
     font-size: 20px;
@@ -26,6 +41,7 @@ p{
     width: 100%;
     z-index: 1000;
 }
+
 .nav-header{
     display: flex;
     align-items: center;
@@ -40,7 +56,6 @@ p{
 .nav-header h2{
     color: white;
     font-weight: 700;
-    width: 220px;
     height: 23px;
 }
 .header-r{
@@ -77,7 +92,6 @@ p{
 .btn-lan{
     /* weight: 25px; */
     font-size: 16px;
-    width: 26px;
     height: 25px;
     background-color: white;
     border: 0;
@@ -102,22 +116,68 @@ p{
     padding-bottom: 10px;
 }
 .btn-catalog{
+    color: #FFFFFF;
     background-color: transparent;
     border: 0;
-    color: white;
     font-size: 15px;
-    padding-right: 0px;
-    padding-left: 0px;
-    padding-top: 0px;
-    padding-bottom: 0px;
+    padding: 10px 20px;
     cursor: pointer;
-    height: 17.25px;
+    text-decoration: none;
 }
 .nav-header, .nav-content, .btn-catalog, .btn-lan{
     font-family: 'Inter', sans-serif;
     font-weight: 400;
 }
-
+.a-catalog{
+    color: #FFFFFF;
+    background-color: transparent;
+    border: 0;
+    font-size: 15px;
+    padding: 0px;
+    cursor: pointer;
+    text-decoration: none;
+}
+.btn-catalog:hover {
+    background-color: #505f75; 
+}
+.nav-content ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: none; 
+    position: absolute;
+    background-color: #354567;
+    border-radius: 5px;
+    top: 40px; 
+    left: 0;
+    width: 200px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+}
+.nav-content li > a {
+    color: white;
+    padding: 10px;
+    text-decoration: none;
+    display: block;
+}
+.nav-content li > a:hover {
+    background-color: #505f75;
+}
+.nav-content li:hover > ul {
+    display: block;
+}
+.nav-content li {
+    position: relative;
+    list-style-type: none;
+}
+.nav-content li > a {
+    padding: 10px 20px;
+    font-size: 16px;
+    background-color: transparent;
+    display: block;
+}
+.nav-content li > a:hover {
+    background-color: #505f75;
+}
 
 
 
