--- a/CSS/donationOverview.css
+++ b/CSS/donationOverview.css
@@ -167,13 +167,28 @@ li > a:hover {
 }
 /*list*/
 .list-bg{
+    margin-top: 107px;
     width: 100%;
     height: 374px;
     text-align: center;
     background-color: #19396D;
-    padding-top: 40px
+    padding-top: 40px;
+    z-index: 1;
+    margin-bottom: 330px;
 }
 .list-h{
     color: white;
     font-size: 700;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
+.ag-theme-alpine{
+    margin-left: 60px;
+    margin-right: 60px;
+    margin-top: 40px;
+    height: 540px;
+    z-index: 2;
+}
+.ag-icon.filter {
+    border: none !important;  /* 强制移除边框 */
+  }
