--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -51,8 +51,7 @@ p{
     padding-right: 30px;
     width: 100%;
     height: 59px;
-    box-shadow: 0px 1px 3px 0px #0000004D;
-    box-shadow: 0px 4px 8px 3px #00000026;
+    box-shadow: 0px 1px 3px 0px #0000004D, 0px 4px 8px 3px #00000026;
 
 }
 .nav-header h2{
