--- a/CSS/searchHomelessLocation.css
+++ b/CSS/searchHomelessLocation.css
@@ -165,4 +165,186 @@ li > a {
 li > a:hover {
     background-color: #505f75;
 }
+/**choose*/
+.map{
+    margin-top: 107px;
+    z-index: 1;
+    position: relative;
+}
+.sh{
+    margin-left: 50px;
+    color: #19396d;
+    margin-top: 40px;
+    margin-bottom: 20px;
+}
+.choose{
+    position: relative;
+    position: absolute;
+    left: 20px;
+    top: 127px;
+    bottom: 20px;
+    z-index: 2;
+    background-color: white;
+    width: 36%;
+    border-radius: 30px;
+}
+.choose-h{
+    color: #19396D;
+    text-align: center;
+    margin-top: 45px;
+    margin-bottom: 0px;
+}
+.choose-hr{
+    margin-top: 13px;
+    margin-bottom: 0px;
+    border: 1px solid #19396D;
+    margin-right: 50px;
+    margin-left: 50px;
+}
+.myPlace{
+    display: flex;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 0px;
+}
+.myPlace-img{
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
+    cursor: pointer;
+}
+.search-box1{
+    position: relative;
+}
+.search-box1, .search-input1{
+    width: 100%;
+}
+.serch-input-1{
+    padding-right: 28px;
+}
+.search-icon1{
+    position: absolute;
+    right: 11px;
+    cursor: pointer;
+    top: 11px;
+}
+.search{
+    display: flex;
+    margin-left: 50px;
+    margin-right: 50px;
+}
+.search-l{
+    margin-right: 20px;
+    width: 50%;
+}
+.sheet-cm{
+    width: 40px;
+    margin-right: 10px;
+    white-space: nowrap;
+    margin-top: 9px;
+    margin-bottom: 5px;
+}
+.search-c1{
+    margin-top: 7px;
+}
+.search-r{
+    width: 50%;
+}
+.input, .search-input1{
+    background-color: #dddddd;
+    height: 40px;
+    border-radius: 2px;
+}
+.input{
+    width: 100%;
+}
+.btn-search{
+    justify-content: end;
+    margin-top: 7px;
+    background-color: #47587d;
+    border-radius: 100px;
+    width: 26%;
+    height: 40px;
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    right: 50px;
+    border: 0;
+}
+.btn-search:hover{
+    background-color: #505f75;
+}
+/*spinner*/
+.btn-spinner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.spinner {
+    border: 2px solid #f3f3f3; /* 輪廓色 */
+    border-top: 2px solid #3498db; /* 進度色 */
+    border-radius: 50%;
+    width: 16px;
+    height: 16px;
+    animation: spin 1s linear infinite;
+}
+@keyframes spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+/*footer*/
+.footer{
+    width: 100%;
+    height: 294px;
+    background-color: #d9d9d9;
+    padding-top: 43px;
+    padding-left: 92px;
+    padding-right: 92px;
+    position: relative;
+}
+.footer-top{
+    display: flex;
+    justify-content: space-between;
+}
+.left h6, .middle1 h6, .middle2 h6, .right h6{
+    margin-top: 0px;
+    margin-bottom: 10px;
+}
+.middle1 h6, .middle2 h6, .right h6, .instagram, .facebook, .youtube{
+    cursor: pointer;
+}
+.left h2{
+    font-weight: 700;
+    margin-top: 0px;
+    color: #19396d;
+    margin-bottom: 18px;
+}
+.middle1 h3, .middle2 h3, .right h3{
+    margin-top: 0px;
+    color: #19396d;
+    margin-bottom: 18px;
+}
+.footer-hr{
+    width: 90%;
+    position: absolute;
+    margin: 0;
+    bottom: 42px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.footer-p{
+    position: absolute;
+    right: 92px;
+    margin: 0;
+    bottom: 17px;
+    text-align: end;
+}
+.footer-a{
+    text-decoration: none;
+    color: black;
+}
 
