--- a/CSS/FAQ.css
+++ b/CSS/FAQ.css
@@ -1,3 +1,29 @@
+html{
+    background-color: #FFFFFF; 
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+*{
+    box-sizing: inherit;
+}
+
+body{
+    font-family: "Noto sans", sans-serif;
+    font-weight: 550;
+    margin: 0;
+    padding: 0;
+    cursor: default;
+    overflow-x: hidden;
+}
+
+.contain{
+    width: 100%;
+    margin: 0 auto;
+}
+
 .main_contain{
     width: 1120px;
     height: auto;
@@ -68,6 +94,8 @@
 .sub:hover {
     background-color: #354567;
     color: #ffffff;
+    transition: 0.3s;
+    cursor: pointer;
 }
 
 .sub.active {
