--- a/CSS/basic.css
+++ b/CSS/basic.css
@@ -51,7 +51,7 @@ p{
     padding-right: 30px;
     width: 100%;
     height: 59px;
-    box-shadow: 0px 1px 3px 0px #0000004D, 0px 4px 8px 3px #00000026;
+    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.3), 0px 4px 8px 3px rgba(0, 0, 0, 0.15) !important;
 
 }
 .nav-header h2{
