--- a/CSS/index.css
+++ b/CSS/index.css
@@ -11,21 +11,40 @@ body{
 }
 h2{
     font-size: 20px;
+    @media(max-width: 360px){
+        font-size: 10px;
+        white-space: nowrap;
+    }
 }
 h3{
     font-size: 17px;
+    @media(max-width: 360px){
+        font-size: 9px;
+    }
 }
 h4{
-    font-size: 15px;;
+    font-size: 15px;
+    @media(max-width: 360px){
+        font-size: 8px;
+    }
 }
 h5{
     font-size: 14px;
+    @media(max-width: 360px){
+        font-size: 7px;
+    }
 }
 h6{
     font-size: 12px;
+    @media(max-width: 360px){
+        font-size: 6px;
+    }
 }
 p{
-    font-size: 10px;;
+    font-size: 10px;
+    @media(max-width: 360px){
+        font-size: 5px;
+    }
 }
 /*header*/
 .fixed{
@@ -45,6 +64,9 @@ p{
     width: 100%;
     height: 59px;
     box-shadow: 0px 1px 3px 0px #0000004D, 0px 4px 8px 3px #00000026;
+    @media(max-width: 360px){
+        height: 30px;
+    }
 }
 .nav-header h2{
     color: white;
@@ -55,11 +77,14 @@ p{
     align-items: center;
     justify-content: space-between;
     width: 240px;
+    @media(max-width: 360px){
+        transform: scale(0.5);
+    }
 }
 .search-box{
     position: relative;
     width: 170px;
-    height: 25px;;
+    height: 25px;
 }
 .search-input{
     font-size: 15px;
@@ -82,7 +107,7 @@ p{
     cursor: pointer;
 }
 .btn-lan{
-    weight: 25px;
+    width: 25px;
     height: 25px;
     background-color: white;
     border: 0;
@@ -93,6 +118,10 @@ p{
     padding-bottom: 3px;
     cursor: pointer;
     border-radius: 2px;
+    font-size: auto;
+    @media(max-width: 360px){
+        margin-right: 5px;
+    }
 }
 .nav-content{
     width: 100%;
@@ -105,6 +134,17 @@ p{
     padding-left: 115px;
     padding-top: 20px;
     padding-bottom: 10px;
+    @media(max-width: 360px){
+        height: 90px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr); /* 分成三等份 */
+        grid-gap: 10px; /* 設定格間間距 */
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, auto); /* 分成兩行，高度自動 */
+        padding-left: 30px;
+        padding-top: 0px;
+        padding-bottom: 0px;   
+    }
 }
 .btn-catalog {
     color: #FFFFFF;
@@ -114,6 +154,10 @@ p{
     padding: 10px 20px;
     cursor: pointer;
     text-decoration: none;
+    @media(max-width: 360px){
+        padding-right: 0px;
+        padding-left: 0px;
+    }
 }
 .a-catalog{
     color: #FFFFFF;
@@ -123,6 +167,22 @@ p{
     padding: 0px;
     cursor: pointer;
     text-decoration: none;
+}
+@media (max-width: 768px) {
+    .dropdown, .a-catalog {
+        white-space: nowrap;
+    }
+}
+@media (max-width: 360px) {
+    .dropdown, .a-catalog {
+        transform: scale(0.5);
+        white-space: nowrap;
+    }
+}
+.home-icon{
+    @media(max-width: 360px){
+        transform: scale(0.5);
+    }
 }
 .btn-catalog:hover {
     background-color: #505f75; 
@@ -165,16 +225,27 @@ li > a {
 li > a:hover {
     background-color: #505f75;
 }
+
 /*bigpic*/
 .bigpic{
     width: 100%;
     position: relative;
     margin-top: 107px;
-
-    overflow: hidden;
+    @media(max-width: 768px){
+        height: 334px;
+        overflow: hidden;
+    }
+    @media(max-width: 360px){
+        height: 167px;
+        margin-top: 120px;
+    }
 }
 .homeless{
     width: 100%;
+    @media(max-width: 768px){
+        height: 100%;
+        object-fit: cover;
+    }
 }
 .bigpic-l{
     position: absolute;
@@ -187,6 +258,11 @@ li > a:hover {
     opacity: 0; 
     transform: translateX(-100%); 
     transition: opacity 0.5s ease, transform 0.8s ease; 
+    @media(max-width: 360px){
+        gap: 2px;
+        left: 15px;
+        top: 15px;
+    }
 }
 .bigpic-r{
     position: absolute;
@@ -199,6 +275,11 @@ li > a:hover {
     opacity: 0; 
     transform: translateX(+100%); 
     transition: opacity 0.5s ease, transform 0.8s ease; 
+    @media(max-width: 360px){
+        gap: 2px;
+        right: 15px;
+        bottom: 15px;
+    }
 }
 .bigpic-l.show, .bigpic-r.show {
     opacity: 1; 
@@ -213,6 +294,10 @@ li > a:hover {
     padding-bottom: 0px;
     margin: 0px;
     color: black;
+    @media(max-width: 360px){
+        padding-left: 2px;
+        padding-right: 2px;
+    }
 }
 /*purpose*/
 .purpose {
@@ -228,12 +313,23 @@ li > a:hover {
     margin-bottom: 34px;
     text-align: center;
     font-weight: 700;
+    @media(max-width: 360px){
+        margin-bottom: 0px;
+    }
 }
 .purpose-c{
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    @media(max-width: 360px){
+        display: grid;
+        grid-template-columns: repeat(12, 1fr);
+        grid-gap: 0px;
+        margin-bottom: 20px;
+        margin-left: 350px;
+        margin-left: 0px;
+    }
 }
 .season-img, .season-c, .give {
     opacity: 0; 
@@ -248,9 +344,19 @@ li > a:hover {
     height: 268px;
     background-color: #A3A5A6;
     border-radius: 2px;
+    grid-column: span 6;
 }
+@media (max-width: 360px) {
+    .giver, .taker {
+      grid-column: span 12;
+      transform: scale(0.7);
+    }
+  }
 .giver{
     margin-right: 200px;
+    @media(max-width: 768px){
+        margin-right: 60px;
+    }
 }
 .giver-h, .taker-h{
     position: absolute;
@@ -304,14 +410,26 @@ li > a:hover {
     width: 100%;
     margin-top: 83px;
     border-radius: 30px 30px 0px 0px;
+    @media(max-width: 360px){
+        margin-top: 0px;
+    }
 }
 .season-img{
     position: relative;
     margin-bottom: 34px;
+    @media(max-width: 768px){
+        height: 370px;
+        overflow: hidden;
+        position: relative;
+    }
 }
 .spring-img, .summer-img, .autumn-img, .winter-img{
     width: 100%;
     border-radius: 30px 30px 0px 0px;
+    @media(max-width: 768px){
+        height: 100%;
+        object-fit: cover;
+    }
 }
 .spring-img, .summer-img, .autumn-img{
     display: none;
@@ -371,6 +489,12 @@ li > a:hover {
     font-weight: 900;
     z-index: 5;
     margin: 0;
+    @media(max-width: 768px){
+        white-space: nowrap;
+    }
+    @media(max-width: 360px){
+        font-size: 80px;
+    }
 }
 .spring-month, .summer-month, .autumn-month, .winter-month{
     font-size: 35px;
@@ -385,6 +509,7 @@ li > a:hover {
     font-weight: 700;
     z-index: 5;
 }
+
 .give{
     position: relative;
     width: 100%;
@@ -398,11 +523,28 @@ li > a:hover {
     position: absolute;
     top:34px;
     gap: 25px;
+    @media(max-width: 768px){
+        gap: 5px;
+    }
+    @media(max-width: 360px){
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+        margin-left: 100px;
+    }
 }
+@media (max-width: 360px) {
+    .winter, .summer, .spring, .autumn {
+      grid-template-columns: 1fr;
+    }
+  }
 .cardA, .cardB, .cardC, .cardD, .cardE{
     width: 191px;
     height: 256px;
     position: relative;
+    @media(max-width: 768px){
+        width: 140px;
+    }
 }
 .card-imgA, .card-imgB, .card-imgC, .card-imgD, .card-imgE{
     position: absolute;
@@ -442,6 +584,9 @@ li > a:hover {
     text-align: center;
     font-weight: 700;
     margin-bottom: 33px;
+    @media(max-width: 360px){
+        margin-top: 1150px;
+    }
 }
 .carousel {
     width: 100%;
@@ -449,9 +594,11 @@ li > a:hover {
     background: linear-gradient(180deg, #FFFFFF 0%, #DDDDDD 100%);
     display: flex;
     margin-bottom: 68px;
-
     opacity: 0; 
     transition: opacity 0.8s ease; 
+    @media(max-width: 360px){
+        height: 178px;
+    }
 }
 .carousel.show {
     opacity: 1; 
@@ -460,6 +607,9 @@ li > a:hover {
     width: 50%;
     height: 356px;
     position: relative;
+    @media(max-width: 360px){
+        height: 178px;
+    }
 }
 .carousel-img{
     display: flex;
@@ -470,6 +620,9 @@ li > a:hover {
 .carousel-img > div {
     width: 100%;
     display: none; /* 初始隱藏所有幻燈片 */
+    @media(max-width: 360px){
+        overflow: hidden;
+    }
 }
 .carousel-img > div.active {
     display: block; /* 只有當前幻燈片顯示 */
@@ -496,9 +649,17 @@ li > a:hover {
 }
 .control-prev {
     left: 31px;
+    @media(max-width: 360px){
+        left: 15px;
+        transform: scale(0.5);
+    }
 }
 .control-next {
     right: 31px;
+    @media(max-width: 360px){
+        transform: scale(0.5);
+        right: 15px;
+    }
 }
 .indicators-c{
     display: flex;
@@ -526,6 +687,11 @@ li > a:hover {
     padding-top: 100px;
     padding-left: 90px;
     padding-right: 90px;
+    @media(max-width: 360px){
+        padding-top: 25px;
+        padding-left: 25px;
+        padding-right: 25px;
+    }
 }
 .card-c1 h2{
     margin-top: 0px;
@@ -553,11 +719,24 @@ li > a:hover {
     padding-left: 92px;
     padding-right: 92px;
     position: relative;
+    @media(max-width: 360px){
+        height: 580px;
+    }
 }
 .footer-top{
     display: flex;
     justify-content: space-between;
+    @media(max-width: 360px){
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        grid-gap: 20px;
+    }
 }
+@media (max-width: 360px) {
+    .footer-top {
+      grid-template-columns: 1fr;
+    }
+  }
 .left h6, .middle1 h6, .middle2 h6, .right h6{
     margin-top: 0px;
     margin-bottom: 10px;
